remove bson and try fix deserialize fst and kryo